cluster/infra/controllers/cloudflared/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress
  namespace: cloudflared
spec:
  podSelector:
    matchLabels:
      pod: cloudflared
  policyTypes:
    - Ingress
    - Egress
  ingress: [] # no ingress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: websecure
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8        # pod/service CIDRs
              - 172.16.0.0/12     # private range
              - 192.168.178.0/24  # router range
      ports:
        - protocol: TCP
          port: 443
        - protocol: UDP
          port: 443
